Bug #48707
client: unmount() doesn't dump the cache
% Done:
0%
Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature:
Description
The delay_put_inodes() will be called by the tick() periodically
per second, and when the _unmount() is waiting for the inode_map
to be cleared, if the delay_i_release is empty the _unmount() will
be woke up too frequent that the dump_cache() won't get any chance
to be called.
History
#1 Updated by Xiubo Li about 1 month ago
- Status changed from New to Fix Under Review
- Pull request ID set to 38698
#2 Updated by Patrick Donnelly 16 days ago
- Target version set to v16.0.0
- Source set to Development
#3 Updated by Patrick Donnelly 14 days ago
- Status changed from Fix Under Review to Resolved